--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,5 @@
 fail_fast: false
+exclude: '^/fixtures/*'
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.3.0
@@ -9,6 +10,7 @@ repos:
       - id: check-symlinks
       - id: check-yaml
       - id: end-of-file-fixer
+        exclude: ^fixtures/
       - id: mixed-line-ending
       - id: trailing-whitespace
   - repo: https://github.com/psf/black
